<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/maxresdefault"
    android:orientation="vertical"
    android:paddingBottom="20sp"
    android:paddingLeft="10sp"
    android:paddingRight="10sp"
    android:paddingTop="50sp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/lock_this_photo"
        android:background="@drawable/my_border"
        android:textColor="#ffffff"
        android:textSize="35sp" />

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_gravity="center"
        android:background="#e4000000"/>

    <EditText
        android:id="@+id/edtNamePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="40sp"
        android:hint="@string/output_name"
        android:textColorHint="#7bffffff"
        android:textColor="#ffffff"
        android:background="#79000000"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtPasswordPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:hint="@string/output_password"
        android:textColorHint="#7bffffff"
        android:textColor="#ffffff"
        android:background="#79000000"
        android:textSize="30sp"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp"
        android:background="#c7fff700"
        android:text="@string/save_photo"
        android:textSize="30sp" />

</LinearLayout>
