<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="50sp"
    android:paddingLeft="30sp"
    android:paddingRight="30sp"
    android:paddingTop="50sp"
    android:background="@drawable/maxresdefault" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lockPhotos"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:background="@drawable/my_border"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/addImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:text="@string/add_photos"
        android:background="#c7fff700"
        android:textSize="30sp" />

    <Button
        android:id="@+id/useCamera"
        android:layout_width="match_parent"
        android:layout_marginTop="40sp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:background="#c7fff700"
        android:textSize="30sp" />

</LinearLayout>