<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="50sp"
    android:paddingLeft="30sp"
    android:paddingRight="30sp"
    android:paddingTop="50sp"
    android:background="@drawable/maxresdefault">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_password"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:background="@drawable/my_border"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50sp"
        android:layout_marginTop="50sp"
        android:hint="@string/password_require"
        android:textColorHint="#7bffffff"
        android:background="#b5000000"
        android:textColor="#bcffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnDecrypted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unlock"
        android:background="#c7fff700"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/ivInvalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@drawable/encryption"/>

</LinearLayout>